--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "my_parser_koder"
-version = "0.1.0"
+name = "Person_Parser"
+version = "0.2.0"
 edition = "2021"
 description = "Rust parser"
 license = "MIT"
